--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,36 +1,36 @@
-#·şÎñÆ÷ÉèÖÃ
+#æœåŠ¡å™¨è®¾ç½®
 server.port=9898
 
 #server.context-path=/
 
-#ÈÈ²¿ÊğÉúĞ§
+#çƒ­éƒ¨ç½²ç”Ÿæ•ˆ
 spring.devtools.restart.enabled=true
-#Ò³ÃæË¢ĞÂ
+#é¡µé¢åˆ·æ–°
 spring.thymeleaf.cache=false
 
-#ÈÕÖ¾ÅäÖÃÎÄ¼ş
+#æ—¥å¿—é…ç½®æ–‡ä»¶
 logging.config=classpath:log/log-dev.xml
 logging.level.org.scnydx.huliang.dao=debug
 
-#Êı¾İÔ´ÅäÖÃ
+#æ•°æ®æºé…ç½®
 spring.datasource.url=jdbc:mysql://localhost:3306/db_courier?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#Êı¾İ³Ø
+#æ•°æ®æ± 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#³õÊ¼»¯Á¬½ÓÊı
+#åˆå§‹åŒ–è¿æ¥æ•°
 spring.datasource.tomcat.initial-size=3
-#×îĞ¡Á¬½ÓÊı
+#æœ€å°è¿æ¥æ•°
 spring.datasource.tomcat.min-idle=3
-#×î´óÁ¬½ÓÊı
+#æœ€å¤§è¿æ¥æ•°
 spring.datasource.tomcat.max-active=10
-#»º´æpreparedStatement,mysql5.5ÒÔÏÂÃ»ÓĞ
+#ç¼“å­˜preparedStatement,mysql5.5ä»¥ä¸‹æ²¡æœ‰
 spring.datasource.dbcp2.pool-prepared-statements=true
-#À©Õ¹²å¼ş
+#æ‰©å±•æ’ä»¶
 spring.datasource.filters=stat,wall,log4j
 
 
-#mybatis pagehelper ·ÖÒ³²å¼şÅäÖÃ
+#mybatis pagehelper åˆ†é¡µæ’ä»¶é…ç½®
 pagehelper.helper-dialect=mysql
 pagehelper.reasonable=false
