--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,46 +1,49 @@
-#服务器设置
+#\u670D\u52A1\u5668\u8BBE\u7F6E
 server.port=9898
 #server.context-path=/test14
 
-#上传文件大小设置
+#\u4E0A\u4F20\u6587\u4EF6\u5927\u5C0F\u8BBE\u7F6E
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
 
-#请求编码配置
+#\u8BF7\u6C42\u7F16\u7801\u914D\u7F6E
 spring.http.encoding.charset=UTF-8
 spring.http.multipart.enabled=true
 spring.http.encoding.force=true
 
-#页面默认前缀目录
+#\u9875\u9762\u9ED8\u8BA4\u524D\u7F00\u76EE\u5F55
 spring.mvc.view.prefix=/
-#响应页面默认后缀
+#\u54CD\u5E94\u9875\u9762\u9ED8\u8BA4\u540E\u7F00
 spring.mvc.view.suffix=.html
 
-#实际加载配置文件
+#\u5B9E\u9645\u52A0\u8F7D\u914D\u7F6E\u6587\u4EF6
 spring.profiles.active=dev
 
-#Mybatis配置
+#Mybatis\u914D\u7F6E
 mybatis.type-aliases-package=org.scnydx.huliang.dao
 mapper.mappers=org.scnydx.huliang.mappers.MyMapper
 mapper.i-d-e-n-t-i-t-y=MYSQL
-#xml添加下面两个配置
+#xml\u6DFB\u52A0\u4E0B\u9762\u4E24\u4E2A\u914D\u7F6E
 #mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/*.xml
-#数据库下划线转驼峰
+#\u6570\u636E\u5E93\u4E0B\u5212\u7EBF\u8F6C\u9A7C\u5CF0
 mybatis.configuration.map-underscore-to-camel-case=true
-#返回map类型数据时，空值可以setter
+#\u8FD4\u56DEmap\u7C7B\u578B\u6570\u636E\u65F6\uFF0C\u7A7A\u503C\u53EF\u4EE5setter
 mybatis.configuration.call-setters-on-nulls=true
 
-#redis配置
-#redis 数据库索引(默认0)
+#redis\u914D\u7F6E
+#redis \u6570\u636E\u5E93\u7D22\u5F15(\u9ED8\u8BA40)
 spring.redis.database=0
-#redis服务器地址
+#redis\u670D\u52A1\u5668\u5730\u5740
 spring.redis.host=127.0.0.1
-#redis服务器端口
+#redis\u670D\u52A1\u5668\u7AEF\u53E3
 spring.redis.port=6379
-#redis服务器连接密码
+#redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801
 spring.redis.password=
 
-#查询快递路径
+#\u67E5\u8BE2\u5FEB\u9012\u8DEF\u5F84
 searchLogUrl=https://www.kuaidi100.com/query
+
+
+
 
